# packages/item-service/src/openapi-docs.json
@@ -232,6 +232,62 @@
                 }
             }
         },
+        "/item-service/instances": {
+            "get": {
+                "tags": ["item-service"],
+                "summary": "Get an array of instances.",
+                "operationId": "getInstances",
+                "parameters": [
+                    {
+                        "name": "start",
+                        "in": "query",
+                        "description": "Beginning of the results.",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "minimum": 0,
+                            "example": 0
+                        }
+                    },
+                    {
+                        "name": "limit",
+                        "in": "query",
+                        "description": "Max number of results.",
+                        "required": true,
+                        "schema": {
+                            "type": "integer",
+                            "minimum": 1,
+                            "example": 10
+                        }
+                    },
+                    {
+                        "name": "user_id",
+                        "in": "query",
+                        "description": "Focused user.",
+                        "required": false,
+                        "schema": {
+                            "type": "string",
+                            "example": "Mr 2"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Instances"
+                                }
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Server error"
+                    }
+                }
+            }
+        },
         "/item-service/instance/{item_id}/{instance_number}": {
             "get": {
                 "tags": ["item-service"],
@@ -317,7 +373,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/ItemInstance"
+                                    "$ref": "#/components/schemas/Instance"
                                 }
                             }
                         }
@@ -364,7 +420,7 @@
                         "content": {
                             "application/json": {
                                 "schema": {
-                                    "$ref": "#/components/schemas/ItemInstance"
+                                    "$ref": "#/components/schemas/Instance"
                                 }
                             }
                         }
@@ -413,7 +469,7 @@
             "Items": {
                 "type": "object",
                 "properties": {
-                    "result": {
+                    "results": {
                         "type": "array",
                         "example": [
                             {
@@ -432,8 +488,7 @@
                         "type": "object",
                         "example": {
                             "from": 0,
-                            "perPage": 10,
-                            "to": 10,
+                            "count": 1,
                             "total": 1
                         }
                     }
@@ -460,6 +515,32 @@
                         "type": "object",
                         "additionalProperties": {
                             "type": "string"
+                        }
+                    }
+                }
+            },
+            "Instances": {
+                "type": "object",
+                "properties": {
+                    "results": {
+                        "type": "array",
+                        "example": [
+                            {
+                                "item_id": 1,
+                                "user_id": "Mr 1",
+                                "instance_number": 3,
+                                "data": {},
+                                "tezos_block": "BMDdde8FcmEf8tGPvw5fQyC8iiQnggWgcBohBWWqibLt4J47sfL",
+                                "tezos_contract_address": "KT1BcDs8sydDppiTtRj6NgeZaHDgTs6h9Tuq"
+                            }
+                        ]
+                    },
+                    "pagination": {
+                        "type": "object",
+                        "example": {
+                            "from": 0,
+                            "count": 1,
+                            "total": 1
                         }
                     }
                 }
